--- a/src/components/Services.css
+++ b/src/components/Services.css
@@ -1,5 +1,6 @@
 .services {
-  background: white;
+  /* background: white; */
+  background-color: whitesmoke;
   position: relative;
   overflow: hidden;
 }
