--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,7 +1,8 @@
 /* === BASE STYLES (Desktop - No Change here) === */
 .about {
-  background: linear-gradient(135deg, #FFF8DC 0%, #F5F5DC 50%, #FFF8DC 100%);
+  /* background: linear-gradient(135deg, #FFF8DC 0%, #F5F5DC 50%, #FFF8DC 100%); */
   position: relative;
+  background-color: whitesmoke;
   overflow: hidden; /* Prevent scrollbar if scaling issues occur */
 }
 
