--- a/src/pages/ContactPage.css
+++ b/src/pages/ContactPage.css
@@ -140,7 +140,7 @@
   font-family: 'Playfair Display', serif;
   font-size: 1.8rem;
   font-weight: 700;
-  color: #1dc374;
+  color: #016232;
 }
 
 .stat-label {
