--- a/src/components/About.css
+++ b/src/components/About.css
@@ -16,7 +16,7 @@
 }
 
 .about-text h2 {
-  color: #18a85d;
+  color: #016232;
   margin-bottom: 2rem;
   font-size: 2.5rem; /* Thoda adjust kiya taaki mobile me kate nahi */
 }
@@ -95,7 +95,7 @@
 
 .value-card:hover {
   transform: translateY(-5px);
-  border-color: #1dc374;
+  border-color: #016232;
 }
 
 .value-icon {
