--- a/src/components/Products.css
+++ b/src/components/Products.css
@@ -1,7 +1,7 @@
 :root {
   --primary-color: #2C5530;
-  --secondary-color: #B38B6D;
-  --accent-color: #8B4513;
+  --secondary-color: #0e3823;
+  --accent-color: #016232;
   --light-bg: #F9F7F3;
   --dark-text: #1A1A1A;
   --light-text: #666666;
