--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -82,7 +82,7 @@
 .footer-section h3 {
   margin-bottom: 1.5rem;
   font-size: 1.3rem;
-  color: var(--primary-color);
+  color: white;
   font-weight: 600;
 }
 
